--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
+    "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-if": "^2.0.2",
     "gulp-pug": "^3.3.0",
