--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglifyes": "^0.1.2",
     "gulp-util": "^3.0.8",
+    "hard-source-webpack-plugin": "^0.5.18",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.5.0",
