--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/iTakeHome/ef-template#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
@@ -36,13 +36,20 @@
     "gulp-util": "^3.0.8",
     "hard-source-webpack-plugin": "^0.5.18",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "vue-loader": "^13.5.0",
+    "sass-loader": "^6.0.7",
+    "vue-loader": "^13.7.1",
     "vue-template-compiler": "^2.5.8",
     "webpack-stream": "^4.0.0"
   },
   "dependencies": {
+    "extract-loader": "^2.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "jquery": "^3.2.1",
-    "vue": "^2.5.8"
+    "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
+    "vue": "^2.5.8",
+    "webpack": "^3.3.0"
   }
 }
