--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Easy Front-end Template",
   "main": "index.js",
   "scripts": {
-    "dev": "gulp",
-    "dev:prod": "gulp --env=prod",
-    "build": "gulp build",
-    "build:prod": "gulp build --env=prod"
+    "dev": "webpack",
+    "dev:prod": "webpack -p",
+    "build": "webpack",
+    "build:prod": "webpack -p"
   },
   "repository": {
     "type": "git",
