--- a/package.json
+++ b/package.json
@@ -1,55 +1,48 @@
 {
-  "name": "ef-template",
-  "version": "1.0.0",
-  "description": "Easy Front-end Template",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack",
-    "dev:prod": "webpack -p",
-    "build": "webpack",
-    "build:prod": "webpack -p"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/iTakeHome/ef-template.git"
-  },
-  "author": "Filip Petrovic",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/iTakeHome/ef-template/issues"
-  },
-  "homepage": "https://github.com/iTakeHome/ef-template#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
-    "css-loader": "^0.28.7",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.9.0",
-    "gulp-if": "^2.0.2",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglifyes": "^0.1.2",
-    "gulp-util": "^3.0.8",
-    "hard-source-webpack-plugin": "^0.5.18",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "vue-loader": "^13.7.1",
-    "vue-template-compiler": "^2.5.8",
-    "webpack-stream": "^4.0.0"
-  },
-  "dependencies": {
-    "extract-loader": "^2.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "jquery": "^3.2.1",
-    "pug-html-loader": "^1.1.5",
-    "pug-loader": "^2.4.0",
-    "vue": "^2.5.8",
-    "webpack": "^3.3.0"
-  }
+	"name": "ef-template",
+	"version": "1.0.0",
+	"description": "Easy Front-end Template",
+	"main": "index.js",
+	"scripts": {
+		"watch": "node_modules/.bin/webpack --watch",
+		"watch:prod": "node_modules/.bin/webpack --watch -p",
+		"build": "node_modules/.bin/webpack",
+		"build:prod": "node_modules/.bin/webpack -p",
+		"dev": "webpack-dev-server --open --content-base dist --hot"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/ffpetrovic/ef-template.git"
+	},
+	"author": "Filip Petrovic",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/ffpetrovic/ef-template/issues"
+	},
+	"homepage": "https://github.com/ffpetrovic/ef-template#readme",
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.6.1",
+		"babel-register": "^6.26.0",
+		"cross-env": "^5.2.0",
+		"css-loader": "^0.28.7",
+		"extract-loader": "^2.0.1",
+		"file-loader": "^1.1.11",
+		"hard-source-webpack-plugin": "^0.5.18",
+		"html-loader": "^0.5.5",
+		"mini-css-extract-plugin": "^0.4.2",
+		"node-sass": "^4.7.2",
+		"pug-html-loader": "^1.1.5",
+		"sass-loader": "^6.0.7",
+		"vue-loader": "^13.7.1",
+		"vue-template-compiler": "^2.5.8",
+		"webpack": "^4.17.1",
+		"webpack-cli": "^3.1.0",
+		"webpack-dev-server": "^3.1.7"
+	},
+	"dependencies": {
+		"jquery": "^3.2.1",
+		"vue": "^2.5.8"
+	}
 }
